concord_macros/tests/dsl/fail/fail_base_split_https.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client SplitHttpsApi { base https "example.com" }
}

fn main() {}
